package joc.projectile;

public enum ProjectileDirection {
    UP,
    DOWN,
    LEFT,
    RIGHT,
    TOPRIGHT,
    TOPLEFT,
    BOTTOMRIGHT,
    BOTTOMLEFT
}
