@startuml

title __PROJECTILE's Class Diagram__\n

  namespace joc {
    namespace projectile {
      class joc.projectile.ArrowProjectile {
          {static} + DEFAULT_ENEMY_PROJECTILE_SPEED : int
          - angle : double
          - framesPassed : int
          - horizSpeed : double
          - isPlayerThrown : boolean
          - speed : double
          - spriteImage : BufferedImage
          - stayTime : int
          - vertSpeed : double
          - x : double
          - y : double
          + ArrowProjectile()
          + draw()
          + update()
          + updateEnemyProjectile()
          - detectPlayerCollision()
          - slowDown()
      }
    }
  }
  

  namespace joc {
    namespace projectile {
      interface joc.projectile.Projectile {
          {abstract} + draw()
          {abstract} + update()
      }
    }
  }
  

  namespace joc {
    namespace projectile {
      enum ProjectileDirection {
        BOTTOMLEFT
        BOTTOMRIGHT
        DOWN
        LEFT
        RIGHT
        TOPLEFT
        TOPRIGHT
        UP
      }
    }
  }
  

  namespace joc {
    namespace projectile {
      class joc.projectile.RockProjectile {
          {static} + DEFAULT_ENEMY_PROJECTILE_SPEED : int
          {static} + DEFAULT_PROJECTILE_SPEED : int
          - angle : double
          - framesPassed : int
          - horizSpeed : double
          - isPlayerThrown : boolean
          - speed : double
          - spriteImage : BufferedImage
          - stayTime : int
          - vertSpeed : double
          - x : double
          - y : double
          + RockProjectile()
          + RockProjectile()
          + draw()
          + update()
          + updateEnemyProjectile()
          + updatePlayer()
          - detectEnemyCollision()
          - detectPlayerCollision()
          - loadProjectileForAngle()
          - loadProjectileForDirection()
          - slowDown()
      }
    }
  }
  

  joc.projectile.ArrowProjectile .up.|> joc.projectile.Projectile
  joc.projectile.ArrowProjectile o-- joc.window.GameWindow : gameWindow
  joc.projectile.ArrowProjectile o-- joc.map.Map : map
  joc.projectile.RockProjectile .up.|> joc.projectile.Projectile
  joc.projectile.RockProjectile o-- joc.window.GameWindow : gameWindow
  joc.projectile.RockProjectile o-- joc.map.Map : map
  joc.projectile.RockProjectile o-- joc.projectile.ProjectileDirection : projectileDirection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
